--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ div.position {
     top: 1800px;
 }
 
+img {
+    background-image: cross-fade(20%)
+        
+    }
+}
+
 .box {
     background-color: rgba(211, 211, 211, 0.598);
     width:300px;
@@ -157,21 +163,9 @@ color: blue;
     text-align: center;
     color: black
     font-size: 18px;
+}
 
-    from: background-color: red;
-    to: background-color: yellow;
-    width: 100px;
-  height: 100px;
-  background-color: red;
-  animation-name: example7;
-  animation-duration: 4s;
-  }
 
-  .example8 {0%   background-color:red; left:0px; top:0px;
-  25%  background-color:yellow; left:200px; top:0px;
-  50%  background-color:blue; left:200px; top:200px;
-  75%  background-color:green; left:0px; top:200px;
-  100% background-color:red; left:0px; top:0px;}
 
       
   
