--- a/style.css
+++ b/style.css
@@ -1,73 +1,118 @@
 body {
+    background-image: url(effervescent.jpg.jpg); 
     font-family:Georgia, 'Times New Roman', Times, serif
     
 }
 p {
-    font-family:Arial, Helvetica, sans-serif
     font-size: 22px;
+    background-color: rgb(34, 3, 146);
+    color: whitesmoke;
+    margin: 40px 25px 1px 25px;
+    font-family:Arial, Helvetica, sans-serif
+     
+   
 }
 
 ul {
 
 }
+
+h2 {
+    font-size: 28px;
+    color: blue;
+}
 h4 {
     font-family: Georgia, 'Times New Roman', Times, serif
 
 }
+
+
+.position {
+    position: sticky;
+    top: 1900px;
+    right: 900px;
+    bottom: 100px; 
+    left: 10px;
+    
+}
+
 div.position {
     position: absolute;
     left: 100px;
     right: 800px;
-    top: 1800px;
+    top: 2200px;
 }
 
 img {
     background-image: cross-fade(20%)
         
     }
-}
 
-.box {
-    background-color: rgba(211, 211, 211, 0.598);
+
+div.box {
+
+    font-size: 24px;
+    background-color: rgba(7, 187, 109, 0.598);
     width:300px;
-    border:15px solid rgb(54, 78, 4);
-    padding: 50px;
-    margin: 50px;
+    border:5px solid rgb(54, 78, 4);
+    padding: 20px;
+    margin: 25px;
 }
 
-p {
-    
-    background-color: rgb(183, 28, 165);
-    color:rgb(172, 168, 168);
-    margin: 40px 25px 1px 25px;
-}
+
 
 h1 {
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-   font-size:50px;
+   font-size: 50px;
+   color: whitesmoke;
 }
+
+h5 {
+    font-size: 30px;
+    color: whitesmoke
+}
+h6 {
+    background-color: rgb(16, 9, 152);
+    font-size: 18px;
+    color: whitesmoke;
+}
+ul {
+    font-size: 22px;
+    color: whitesmoke;
+    
+}
+
 
 footer {
     position: absolute;
     left: 10px;
     right: 700px;
-    top: 5000px;
-    bottom: 10px;
+    top: 10000px;
+    bottom: 1px;
 }
 
-example6 {
+li {
+
+    background-color: rgb(14, 13, 13);
+}
+
+form {
+    color: whitesmoke;
+}
+.example6 {
     font-size: 24px;
-    text-align: right;
+    text-align: left;
 
-}
+
     display: inline;
-   
+}
     nav.sticky {
+        background-color:rgb(172, 168, 168)
         position: sticky;
         top: 0;
         padding: 3px;
-        background-color: rgb(153, 6, 136);
+        
         border: 1px solid gray;
     }
 
@@ -94,20 +139,20 @@ section {
     color: rgb(148, 11, 121);
 }
 .container {
-    color: red;
+    color: rgb(205, 17, 17);
     }
 
     #container {
         color: grey;
         font-size: 22px;
-        background-color: blue;
+        background-color: rgb(230, 230, 235);
     }
 div.container3 {
 font-size: 50px;
-background-color: aquamarine;
+background-color: rgb(64, 59, 91);
 }
 div.container {
-color: red;
+color: rgb(178, 11, 11);
 }
 .div.container2 {
 background-color: green;
@@ -121,15 +166,10 @@ section a {
 background-color:violet;
 }
 
-.container> a {
+.container a {
 color: orange;
 }
-p {
-font-size: 24px;
-}
-p {
-font-size: 32px!important;
-}
+
 .green {
 color: rgb(6, 62, 6);
 }
@@ -137,23 +177,30 @@ color: rgb(6, 62, 6);
 color: blue;
 }
 
-.example5 {
+ .example5 {
     font-size: 18px;
-}
+   color: whitesmoke;
 
+ }
 .example6 {
-    font-size: 22px;
+    
     color: blue;
 }
 
 #anim {
     animation-name: colorful;
-    animation-duration: 3s;
+    animation-duration: 20s;
   }
 
   @keyframes colorful {
     0% {
       background-color: blue;
+    }
+    25% {
+        background-color
+    }
+    50% {
+        background-color: purple;
     }
     100% {
       background-color: yellow;
@@ -162,7 +209,7 @@ color: blue;
 .example7 {
     text-align: center;
     color: black
-    font-size: 18px;
+   ;
 }
 
 
