--- a/style.css
+++ b/style.css
@@ -1,4 +1,154 @@
-body {
+nav {
+    text-align: right;
+    color: whitesmoke;
+    position: sticky;
+    
+}
+
+
+h1 {
+    color: rgb(3, 3, 3);
+    text-align: center;
+    font-size: 44px;
+    font-family:Arial, Helvetica, sans-serif
+    
+    
+}
+{box-sizing: border-box;}
+
+body { 
+  margin: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.logo {
+     background-color: rgb(247, 246, 246);
+}
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
+  }
+.address {
+    color: rgb(7, 7, 7);
+    font-size: 20px;
+}
+a:link {
+    color: rgb(9, 244, 244);
+}
+a:visited {
+    color: rgb(0, 85, 0);
+  }
+  a:hover {
+    color: rgb(247, 11, 11);
+  }
+  a:active {
+    color: rgb(40, 228, 249);
+  }
+
+  .ideas {
+    color: rgb(16, 16, 16);
+    background-color: rgb(221, 220, 219);
+  overflow: visible;
+
+  }
+  
+
+.image-gallery {
+  width: 50%;
+}
+
+
+
+
+
+
+
+hr.rounded {
+    border-top: 8px solid #bbb;
+    border-radius: 5px;
+}
+
+hr.solid {
+    border-top: 3px solid #bbb;
+  }
+
+quote {
+    font-size: 30px;
+    padding-left: 33%;
+}
+p {
+    font-size: 22px;
+    margin: 40px 25px 1px 25px;
+    color: rgb(1, 0, 0);
+    font-family:Arial, Helvetica, sans-serif
+}
+#box {
+    width: 1100px;
+  height: 100px;
+  background-color: rgb(221, 220, 219);
+  overflow: visible;
+}
+#image {
+   width: 80%;
+}
+
+.home {
+    background-image: url(LOGO.jpg)
+}
+
+#h1home {
+    color: rgb(1, 43, 17);
+}
+
+ul {
+  font-size: 20px;
+}
+/*  body {
     background-image: url(effervescent.jpg.jpg); 
     font-family:Georgia, 'Times New Roman', Times, serif
     
